New Tab Stopped.

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 	
 	<section>
 	  <nav>
-		<a href="https://rahathossenmanik.github.io/html" target="_blank" style="text-decoration:none; color:white;">HTML Tutorials</a>
+		<a href="https://rahathossenmanik.github.io/html" style="text-decoration:none; color:white;">HTML Tutorials</a>
 		<hr/>
-	    <a href="https://rahathossenmanik.github.io/" target="_blank" style="text-decoration:none; color:white;">CSS Tutorials</a>
+	    <a href="https://rahathossenmanik.github.io/" style="text-decoration:none; color:white;">CSS Tutorials</a>
 		<hr/>
 	  </nav>
 	  <article>
