--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 		<hr/>
 	    <a href="https://rahathossenmanik.github.io/" style="text-decoration:none; color:white;">CSS Tutorials</a>
 		<hr/>
+		<a href="https://rahathossenmanik.github.io/read" style="text-decoration:none; color:white;">Online Reader</a>
+		<hr/>
 	  </nav>
 	  <article>
 	    <h1>Introduction to Manik Hosen</h1>
