--- a/index.html
+++ b/index.html
@@ -1,76 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="icon" href="Diamond.png"/>
-<head>
-	<title>Area of Manik Hosen</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<style>
-		* {
-		  box-sizing: border-box;
-		}
-		header {
-		  background-color: #009999;
-		  padding: 15px;
-		  text-align: center;
-		  font-size: 35px;
-		  color: white;
-		}
-		nav {
-		  float: left;
-		  width: 20%;
-		  height: 500px;
-		  background: #006666;
-		  padding: 10px;
-		  color:white;
-		}
-		article {
-		  float: left;
-		  padding: 20px;
-		  width: 80%;
-		  background-color: #d9e6f2;
-		  height: 500px;
-		}
-		footer {
-		  background-color: #009999;
-		  padding: 1px;
-		  text-align: center;
-		  color: white;
-		}
-	</style>
+	<link rel="icon" href="Diamond.png"/>
+	<head>
+		<title>Area of Manik Hosen</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<style>
+			* {
+			  box-sizing: border-box;
+			}
+			header {
+			  background-color: #009999;
+			  padding: 15px;
+			  text-align: center;
+			  font-size: 35px;
+			  color: white;
+			}
+			nav {
+			  float: left;
+			  width: 20%;
+			  height: 500px;
+			  background: #006666;
+			  padding: 10px;
+			  color:white;
+			}
+			article {
+			  float: left;
+			  padding: 20px;
+			  width: 80%;
+			  background-color: #d9e6f2;
+			  height: 500px;
+			}
+			footer {
+			  background-color: #009999;
+			  padding: 1px;
+			  text-align: center;
+			  color: white;
+			}
+		</style>
 	</head>
 	<body>
-	<header>
-	  <a href="https://manikarea.home.blog/" target="_blank" style="text-decoration:none; color:white;">Area Of Manik Hosen</a>
-	</header>
-	
-	<section>
-	  <nav>
-		<a href="https://rahathossenmanik.github.io/html" style="text-decoration:none; color:white;">HTML Tutorials</a>
-		<hr/>
-	    <a href="https://rahathossenmanik.github.io/" style="text-decoration:none; color:white;">CSS Tutorials</a>
-		<hr/>
-		<a href="https://rahathossenmanik.github.io/read" style="text-decoration:none; color:white;">Online Reader</a>
-		<hr/>
-	  </nav>
-	  <article>
-	    <h1>Introduction to Manik Hosen</h1>
-	    <p>Manik Hosen is a Student of Computer Science & Engineering, University of Rajshahi. He has a great interest on Web design and developing. He is well skilled some web language like HTML, CSS, JavaScript, PHP, SQL etc.</p>
-		<h3>Informations About Manik Hosen:</h3>
-	    <ul type="none">
-			<li>Name: Manik Hosen</li>
-			<li>Education: Computer Science & Engineering, University of Rajshahi</li>
-			<li>Address: Motihar Hall, University of Rajshahi, Rajshahi</li>
-			<li>Email: rahathossenmanik@gmail.com</li>
-			<li>Call: 01743-612180</li>
-		</ul>
-	  </article>
-	</section>
-	
-	<footer>
-		<hr/>
-		<p>&copy Manik Hosen Github 2017-2019</p>
-	</footer>
-	
+		<header>
+		  <a href="https://manikarea.home.blog/" target="_blank" style="text-decoration:none; color:white;">Area Of Manik Hosen</a>
+		</header>
+		
+		<section>
+		  <nav>
+			<a href="https://rahathossenmanik.github.io/html" style="text-decoration:none; color:white;">HTML Tutorials</a>
+			<hr/>
+			<a href="https://rahathossenmanik.github.io/" style="text-decoration:none; color:white;">CSS Tutorials</a>
+			<hr/>
+			<a href="https://rahathossenmanik.github.io/readsad" target="_blank" style="text-decoration:none; color:white;">Online Reader</a>
+			<hr/>
+		  </nav>
+		  <article>
+			<h1>Introduction to Manik Hosen</h1>
+			<p>Manik Hosen is a Student of Computer Science & Engineering, University of Rajshahi. He has a great interest on Web design and developing. He is well skilled some web language like HTML, CSS, JavaScript, PHP, SQL etc.</p>
+			<h3>Informations About Manik Hosen:</h3>
+			<ul type="none">
+				<li>Name: Manik Hosen</li>
+				<li>Education: Computer Science & Engineering, University of Rajshahi</li>
+				<li>Address: Motihar Hall, University of Rajshahi, Rajshahi</li>
+				<li>Email: rahathossenmanik@gmail.com</li>
+				<li>Call: 01743-612180</li>
+			</ul>
+		  </article>
+		</section>
+		
+		<footer>
+			<hr/>
+			<p>&copy Manik Hosen Github 2017-2019</p>
+		</footer>
 	</body>
 </html>
