--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		
 		<footer>
 			<hr/>
-			<p>&copy Manik Hosen Github 2017-2019</p>
+			<p>&copy Manik Hosen | Github | 2017-2019</p>
 		</footer>
 	</body>
 </html>
