--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		
 		<section>
 		  <nav>
-			<a href="https://rahathossenmanik.github.io/readsad" target="_blank" style="text-decoration:none; color:white;">Online Reader</a>
+			<a href="https://rahathossenmanik.github.io/reader" target="_blank" style="text-decoration:none; color:white;">Online Reader</a>
 			<hr/>
 			<a href="https://rahathossenmanik.github.io/Calculator" target="_blank" style="text-decoration:none; color:white;">Online Calculator</a>
 			<hr/>
@@ -67,7 +67,7 @@
 		
 		<footer>
 			<hr/>
-			<p>&copy Manik Hosen | Github | 2017-2019</p>
+			<p>&copy Manik Hosen | Github | 2017-2020</p>
 		</footer>
 	</body>
 </html>
