--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 			<hr/>
 			<a href="https://rahathossenmanik.github.io/Calculator" target="_blank" style="text-decoration:none; color:white;">Online Calculator</a>
 			<hr/>
+			<a href="https://rahathossenmanik.github.io/documents" target="_blank" style="text-decoration:none; color:white;">Documents</a>
+			<hr/>
 		  </nav>
 		  <article>
 			<h1>Introduction to Manik Hosen</h1>
