--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		
 		<footer>
 			<hr/>
-			<p>&copy Manik Hosen | Github | 2017-2020</p>
+			<p>&copy Manik Hosen 2017-2020</p>
 		</footer>
 	</body>
 </html>
