--- a/documents.html
+++ b/documents.html
@@ -44,6 +44,10 @@
 			  font-size: 16px;
 			  width: 250px;
 			  height: 50px;
+			  hover: #006666;
+			}
+			button:hover{
+				background-color: #006666;
 			}
 		</style>
 	</head>
@@ -127,7 +131,7 @@
 		</section>
 		<footer>
 			<hr/>
-			<p>&copy Manik Hosen Github 2017-2020</p>
+			<p>&copy Manik Hosen 2017-2020</p>
 		</footer>
 	</body>
 </html>
