--- a/reader.html
+++ b/reader.html
@@ -57,7 +57,7 @@
 		</article>
 		<footer>
 		<hr/>
-		<p>&copy Manik Hosen Github 2017-2020</p>
+		<p>&copy Manik Hosen 2017-2020</p>
 	</footer>
 	</body>
 </html>
