Gallery added on Main

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 			<hr/>
 			<a href="https://rahathossenmanik.github.io/documents" target="_blank" style="text-decoration:none; color:white;">Documents</a>
 			<hr/>
+			<a href="https://rahathossenmanik.github.io/gallery" target="_blank" style="text-decoration:none; color:white;">Web Gallery</a>
+			<hr/>
 		  </nav>
 		  <article>
 			<h1>Introduction to Manik Hosen</h1>
