Ads Re-Finalized

--- a/documents.html
+++ b/documents.html
@@ -58,6 +58,12 @@
 		
 		<!-- Adcash AutoTag -->
         <script type="text/javascript" data-adel="atag" src="//asccdn.com/script/atg.js" czid="xozztwkx"></script>
+		
+		<!-- Adcash Push -->
+		<script src="//acscdn.com/script/ippg.js" data-adel="inpage" zid="4485979" rr="0" mads="2"></script>
+		
+		<!-- Adcash Popunder -->
+		<script src="//acscdn.com/script/suv4.js" data-adel="lwsu" zid="4485983"></script>
 
 	</head>
 	<body>
