React App CV to Github IO

--- a/documents.html
+++ b/documents.html
@@ -1,108 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-	<link rel="icon" href="Diamond.png"/>
+	<link rel="icon" href="Diamond.png" />
 	<head>
 		<title>Area of Manik Hosen</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<style>
 			* {
-			  box-sizing: border-box;
+				box-sizing: border-box;
 			}
 			header {
-			  background-color: #009999;
-			  padding: 15px;
-			  text-align: center;
-			  font-size: 35px;
-			  color: white;
+				background-color: #009999;
+				padding: 15px;
+				text-align: center;
+				font-size: 35px;
+				color: white;
 			}
 			nav {
-			  float: left;
-			  width: 20%;
-			  height: 100%;
-			  background: #006666;
-			  padding: 10px;
-			  color:white;
+				float: left;
+				width: 20%;
+				height: 100%;
+				background: #006666;
+				padding: 10px;
+				color: white;
 			}
 			article {
-			  float: left;
-			  padding: 20px;
-			  width: 80%;
-			  background-color: #d9e6f2;
+				float: left;
+				padding: 20px;
+				width: 80%;
+				background-color: #d9e6f2;
 			}
 			footer {
-			  background-color: #009999;
-			  padding: 1px;
-			  text-align: center;
-			  color: white;
+				background-color: #009999;
+				padding: 1px;
+				text-align: center;
+				color: white;
 			}
 			button {
-			  background-color: #009999;
-			  padding: 1px;
-			  text-align: center;
-			  color: white;
-			  font-size: 16px;
-			  width: 250px;
-			  height: 50px;
-			  hover: #006666;
+				background-color: #009999;
+				padding: 1px;
+				text-align: center;
+				color: white;
+				font-size: 16px;
+				width: 250px;
+				height: 50px;
 			}
-			button:hover{
+			button:hover {
 				background-color: #006666;
 			}
 		</style>
 	</head>
 	<body>
 		<header>
-			 <a href="https://manikarea.com/" target="_blank" style="text-decoration:none; color:white;">Manikarea</a>
+			<a
+				href="https://manikarea.com/"
+				target="_blank"
+				style="text-decoration: none; color: white"
+				>Manikarea</a
+			>
 		</header>
 
-		<section style="background-color:#006666">
-		  <nav>
-			<img src="Manik.png" height="250px" width="250px"/>
-			<p>
-				<b style="font-size:20px">Manik Hosen</b><br/>
-				<font>Computer Science & Engineering</font><br/>
-				<font>University of Rajshahi</font><br/>
-				<font>Email: rahathossenmanik@gmail.com</font><br/>
-				<font>Call: 01743-612180</font>
-			</p>
-		  </nav>
-		  <article>
-			<p style="color:red; font-size:25px;">**Re-distribution of files on any blog, website or public group is prohibited. You can Share Link.**</p>
+		<section style="background-color: #006666">
+			<nav>
+				<img src="Manik.png" height="250px" width="250px" />
+				<p>
+					<b style="font-size: 20px">Manik Hosen</b><br />
+					<font>Computer Science & Engineering</font><br />
+					<font>University of Rajshahi</font><br />
+					<font>Email: rahathossenmanik@gmail.com</font><br />
+					<font>Call: 01743-612180</font>
+				</p>
+			</nav>
+			<article>
+				<p style="color: red; font-size: 25px">
+					**Re-distribution of files on any blog, website or public group is
+					prohibited. You can Share Link.**
+				</p>
 
-			<a href="https://drive.google.com/drive/folders/1ILokRx9ws_SyeeZD6QmjThMEdwuzqTtm?usp=sharing" target="_blank"><button style="background-color:#006666">1<sup>st</sup> Year 2<sup>nd</sup> Semester</button></a><br/>
-			<hr/>
+				<a
+					href="https://drive.google.com/drive/folders/1ILokRx9ws_SyeeZD6QmjThMEdwuzqTtm?usp=sharing"
+					target="_blank"
+					><button style="background-color: #006666">
+						1<sup>st</sup> Year 2<sup>nd</sup> Semester
+					</button></a
+				><br />
+				<hr />
 
+				<a
+					href="https://drive.google.com/drive/folders/1-NFg1bvKJ14ba_oOh-QT21nabuwMz6pI?usp=sharing"
+					target="_blank"
+					><button style="background-color: #006666">
+						2<sup>nd</sup> Year 1<sup>st</sup> Semester
+					</button></a
+				><br />
+				<hr />
 
-			<a href="https://drive.google.com/drive/folders/1-NFg1bvKJ14ba_oOh-QT21nabuwMz6pI?usp=sharing" target="_blank"><button style="background-color:#006666">2<sup>nd</sup> Year 1<sup>st</sup> Semester</button></a><br/>
-			<hr/>
+				<a
+					href="https://drive.google.com/drive/folders/1DHZWe475GgDZhkrhUcVZwSGwa-LAMxno?usp=sharing"
+					target="_blank"
+					><button style="background-color: #006666">
+						2<sup>nd</sup> Year 2<sup>nd</sup> Semester
+					</button></a
+				><br />
+				<hr />
 
+				<a
+					href="https://drive.google.com/drive/folders/1-wc7h495Ti_xnf0l8X2Jrnkj4VlnaR36?usp=sharing"
+					target="_blank"
+					><button style="background-color: #006666">
+						3<sup>rd</sup> Year 1<sup>st</sup> Semester
+					</button></a
+				><br />
+				<hr />
 
-			<a href="https://drive.google.com/drive/folders/1DHZWe475GgDZhkrhUcVZwSGwa-LAMxno?usp=sharing" target="_blank"><button style="background-color:#006666">2<sup>nd</sup> Year 2<sup>nd</sup> Semester</button></a><br/>
-			<hr/>
+				<a
+					href="https://drive.google.com/drive/folders/1j9aOFwJPHRq2LgcpeAQmYAvW4O4oe5W_?usp=sharing"
+					target="_blank"
+					><button style="background-color: #006666">
+						3<sup>rd</sup> Year 2<sup>nd</sup> Semester
+					</button></a
+				><br />
+				<hr />
 
+				<a
+					href="https://drive.google.com/drive/folders/17W5afujssa1xcgnnh-TO4Y2YoTvP6Rkr?usp=sharing"
+					target="_blank"
+					><button style="background-color: #006666">
+						4<sup>th</sup> Year 1<sup>st</sup> Semester
+					</button></a
+				><br />
+				<hr />
 
-			<a href="https://drive.google.com/drive/folders/1-wc7h495Ti_xnf0l8X2Jrnkj4VlnaR36?usp=sharing" target="_blank"><button style="background-color:#006666">3<sup>rd</sup> Year 1<sup>st</sup> Semester</button></a><br/>
-			<hr/>
-
-
-			<a href="https://drive.google.com/drive/folders/1j9aOFwJPHRq2LgcpeAQmYAvW4O4oe5W_?usp=sharing" target="_blank"><button style="background-color:#006666">3<sup>rd</sup> Year 2<sup>nd</sup> Semester</button></a><br/>
-			<hr/>
-
-			<a href="https://drive.google.com/drive/folders/17W5afujssa1xcgnnh-TO4Y2YoTvP6Rkr?usp=sharing" target="_blank"><button style="background-color:#006666">4<sup>th</sup> Year 1<sup>st</sup> Semester</button></a><br/>
-			<hr/>
-
-			<a href="https://manikarea.com" target="_blank"><button style="background-color:#006666">4<sup>th</sup> Year 1<sup>st</sup> Semester</button></a><br/>
-			<hr/>
-		  </article>
+				<a href="https://manikarea.com" target="_blank"
+					><button style="background-color: #006666">
+						4<sup>th</sup> Year 1<sup>st</sup> Semester
+					</button></a
+				><br />
+				<hr />
+			</article>
 		</section>
 		<footer>
-			<hr/>
+			<hr />
 			<p>&copy Manik Hosen 2017-2020</p>
 		</footer>
 
 		<!-- Adsterra Social -->
-		<script type='text/javascript' src='//intellectualhide.com/41/95/33/419533ff5cd92d496c6f2e430037db37.js'></script>
-
+		<script
+			type="text/javascript"
+			src="//intellectualhide.com/41/95/33/419533ff5cd92d496c6f2e430037db37.js"></script>
 	</body>
 </html>
